# jaraco.translate

./: .hgtags  .travis.yml  CHANGES.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: index.rst
jaraco/translate/: google.py  pmxbot.py
